For the case of same date for begin and end of the interval, do not store an interval but only a single date with the relation "Equal".

Note: For any stored search, you must open the advanced search window and click
OK once to store the search XML the correct way.

BUG: 210845

svn path=/trunk/extragear/graphics/digikam/; revision=1036520